--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-blinker==1.8.2
-certifi==2024.8.30
-charset-normalizer==3.3.2
-click==8.1.7
-Flask==3.0.3
+blinker>=1.8.2
+certifi>=2024.8.30
+charset-normalizer>=3.3.2
+click>=8.1.7
+Flask>=3.0.3
 idna==3.8
 importlib_metadata==8.4.0
 itsdangerous==2.2.0
@@ -15,8 +15,8 @@ pytz==2024.1
 requests==2.32.3
 six==1.16.0
 tzdata==2024.1
-urllib3==2.2.2
-Werkzeug==3.0.4
-zipp==3.20.1
-gunicorn==23.0.0
-openai==1.45.1
+urllib3>=2.2.2
+Werkzeug>=3.0.4
+zipp>=3.20.1
+gunicorn>=23.0.0
+openai>=1.0.0
